# halligan-enhancement

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  enhancement.md  problem.md
.github/workflows/: ci.yml
benchmark/: .dockerignore  Dockerfile  requirements.txt  server.py
halligan/: basic_test.py  execute.py  get_models.sh  pyproject.toml
