[project]
authors = [{name = "Xiwen Teoh", email = "teoh6g@gmail.com"}]
name = "halligan"
requires-python = ">=3.10,<3.13"
version = "0.1.0"
dependencies = ["opencv-python>=4.10,<5", "playwright==1.52.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch", "nvidia"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
scikit-image = ">=0.25.2,<0.26"
scipy = ">=1.15.2,<2"
faiss-cpu = ">=1.9.0,<2"
nbformat = ">=5.10.4,<6"
pillow = ">=11.2.1,<12"
python-dotenv = ">=1.1.0,<2"
ultralytics = "==8.2.51"
transformers = "==4.42.4"
pytorch = "==2.3.1"
torchvision = "==0.18.1"
openai = ">=1.82.0,<2"
pytest = ">=8.3.5,<9"
# Benchmark runtime (serve Flask app with Gunicorn)
flask = ">=3.0.2,<3.1"
gunicorn = ">=23.0.0,<24"
# Dev tools
black = ">=24.0.0,<25"
ruff = ">=0.5.0,<1"
mypy = ">=1.10.0,<2"
isort = ">=5.13.0,<6"
pre-commit = ">=3.7.0,<4"

 

[tool.pixi.feature.cuda]
system-requirements = {cuda = "12.1"}

[tool.pixi.feature.cuda.dependencies]
faiss-gpu = ">=1.9.0,<2"
pytorch-cuda = "==12.1"

 

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  "examples/**",
  "**/*.ipynb",
  "halligan/cache/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E701", "E501"]
per-file-ignores = {"**/__init__.py" = ["F401"]}

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = false

[tool.pixi.tasks]
format = "isort . && black ."
lint = "ruff ."
typecheck = "mypy halligan"
test = "pytest -m 'not integration'"
precommit = "pre-commit run --all-files"


[tool.pytest.ini_options]
markers = [
  "integration: mark tests as integration (requires services)",
  "e2e: mark tests as end-to-end (heavy, optional)",
]
